tests/ast_bad_old_array_type.stderr
tests/ast_bad_old_array_type.hop:3:12: error: HOP1007: expected type
