tests/ast_bad_old_array_type.hop
// Verifies the AST for bad old array type.
fn main() i32 {
    var x [4]i32
    return 0
}
